# QNets-Power-Forecasting-and-Generation

./: .gitignore  LICENSE.md  README.md  config.py  pyproject.toml  settings.toml
notebooks/: qnets_power.ipynb
scripts/: dataset_preparation.py
src/qnets_power/: dataset.py  loss.py  main.py  metrics.py  plot_tools.py  registry.py
src/qnets_power/models/: gan.py  rnn.py  vae.py
src/qnets_power/models/quaternion_utils/: README.md  quaternion_layers.py  quaternion_layers_2.py  quaternion_ops.py  quaternion_ops_2.py
