[build-system]
    requires = ["setuptools>=61.0", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "qnets-power-forecasting"
    version = "0.1.0"
    description = "Quaternion Models for Renewable Energy weather-based data generation and forecasting"
    authors = [
        { name = "Gianfranco Di Marco", email = "gianfrancodimarco98@outlook.it" }
    ]
    readme = "README.md"
    license = { text = "MIT" }
    requires-python = ">=3.8"
    dependencies = [
        "dynaconf",
        "numpy",
        "pandas",
        "torch",
        "matplotlib",
        "lightning[extra]"
    ]

[tool.setuptools]
    package-dir = {"" = "src"}

[tool.setuptools.packages.find]
    where = ["src"]